# VibePhoto

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: 01-product-requirements.md  02-technical-architecture.md  03-folder-structure.md  04-database-schema.md  05-catalog-architecture.md  06-processing-engine.md  07-hdr-pipeline.md  08-preset-system.md  09-plugin-sdk.md  10-ui-wireframes.md  11-performance-strategy.md  12-roadmap.md  13-backlog.md
packaging/: VibePhoto.iss  VibePhoto.spec  vibephoto_entry.py
scripts/: build_exe.py  build_installer.py
src/vibephoto/: __init__.py  __main__.py
src/vibephoto/app/: __init__.py  application.py  bootstrap.py
src/vibephoto/cache/: __init__.py  previews.py  thumbnails.py
src/vibephoto/catalog/: __init__.py  database.py  events.py  indexer.py  models.py  repositories.py  schema.py  service.py
src/vibephoto/core/: __init__.py  config.py  container.py  errors.py  events.py  lifecycle.py  logging.py  paths.py
src/vibephoto/export/: __init__.py  color_profiles.py  presets.py  service.py  writers.py
src/vibephoto/hdr/: __init__.py
src/vibephoto/metadata/: __init__.py  reader.py
src/vibephoto/plugins/: __init__.py
src/vibephoto/presets/: __init__.py  library.py  loaders.py  lrtemplate_import.py  mapping.py  xmp_import.py
src/vibephoto/processing/: __init__.py  auto.py  batch.py  clipboard.py  color.py  edit_state.py  engine.py  geometry.py  history.py  image_buffer.py  layered_renderer.py  layers.py  lens.py  lens_store.py  loader.py  mask.py  ops.py  pipeline.py  profiles.py  recent.py  resample.py  scene_linear.py  store.py
src/vibephoto/raw/: __init__.py  colortemp.py  decoder.py  formats.py  service.py
src/vibephoto/resources/: __init__.py
src/vibephoto/resources/themes/: dark.qss
src/vibephoto/services/: __init__.py
src/vibephoto/ui/: __init__.py  adjustments_panel.py  apply_preset_dialog.py  batch_worker.py  color_wheels.py  crop_overlay.py  crop_panel.py  curve_editor.py  develop_canvas.py  develop_footer.py  develop_module.py  export_dialog.py  export_worker.py  filmstrip.py  histogram.py  import_worker.py  layers_panel.py  lens_panel.py  main_window.py  mask_overlay.py  mask_panel.py  module_views.py  overlays.py  photo_grid.py  preset_browser.py  qt_bridge.py  run.py  spinner.py  star_rating.py  theme.py  white_balance_panel.py
src/vibephoto/utils/: __init__.py  hashing.py
tests/: conftest.py  test_application.py  test_auto.py  test_batch.py  test_catalog_db.py  test_catalog_repositories.py  test_catalog_service.py  test_clipboard.py  test_colortemp.py  test_config.py  test_container.py  test_crop_overlay.py  test_develop_engine.py  test_develop_store.py  test_events.py  test_export.py  test_history.py  test_indexer.py  test_layers.py  test_lens.py  test_lifecycle.py  test_logging.py  test_lrtemplate_import.py  test_mask.py  test_mask_overlay.py  test_metadata_reader.py  test_overlays.py  test_paths.py  test_preset_import.py  test_preset_library.py  test_preview_cache.py  test_processing.py  test_profiles.py  test_raw_decoder.py  test_raw_integration.py  test_recent.py  test_scene_linear.py  test_thumbnails.py  test_ui_develop.py  test_ui_develop_footer.py  (+5 more)
tests/data/: make_synthetic_dng.py  synthetic.dng
