[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibephoto"
version = "0.1.2"
description = "A professional, high-performance RAW photo editor and photo catalog manager."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Vibe Photo contributors" }]
keywords = ["raw", "photography", "photo-editor", "hdr", "catalog", "image-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Editors",
]

# Base runtime dependencies. These are pure-Python or ship pre-built wheels on
# all three target platforms, so a plain `pip install -e .` always succeeds.
# Heavyweight / native-build dependencies live in optional extras below so that
# the headless processing core can be installed and tested without a GUI or a
# RAW toolchain.
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.2",
    "platformdirs>=4.2",
    # 16-bit TIFF export (Pillow has no native 16-bit RGB TIFF writer). Pure-Python,
    # ships wheels everywhere, so it stays a base dependency.
    "tifffile>=2024.1",
]

[project.urls]
Homepage = "https://github.com/RenderDeMartes/VibePhoto"
Repository = "https://github.com/RenderDeMartes/VibePhoto"
Issues = "https://github.com/RenderDeMartes/VibePhoto/issues"

[project.optional-dependencies]
# GUI layer. Kept optional so the catalog/processing engine can run headless
# (CI, servers, batch nodes) without pulling in Qt. pytest-qt lives here too
# because it hard-requires a Qt binding at import time — keeping it out of the
# base `dev` extra is what lets the headless test suite run with no Qt present.
ui = ["PySide6>=6.6", "pytest-qt>=4.4"]
# RAW decode + computer-vision pipeline. These ship wheels but are large.
raw = ["rawpy>=0.19"]
# Headless build: the GUI-enabled opencv-python bundles its own Qt, which clashes
# with PySide6 in the frozen app. The processing layer auto-detects cv2 and uses
# its SIMD/multithreaded kernels (blur, HSV, resize, warp) — 4-30x faster than the
# NumPy fallbacks on the develop hot path, so ship it in the desktop bundle.
cv = ["opencv-python-headless>=4.9"]
# OpenImageIO has no universal wheel; documented as an external/system dep.
oiio = ["OpenImageIO>=2.5"]
dev = [
    "pytest>=8.0",
    "coverage>=7.4",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Packaging the desktop app into a standalone Windows executable.
build = ["pyinstaller>=6.6"]
all = [
    "vibephoto[ui,raw,cv,dev,build]",
]

[project.scripts]
vibephoto = "vibephoto.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibephoto = ["py.typed", "resources/**/*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "gui: tests that require a Qt event loop (deselect with -m 'not gui')",
    "slow: long-running tests",
    "integration: cross-layer integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "BLE"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["vibephoto"]
mypy_path = "src"

# rawpy is an optional native dependency (the `raw` extra). It ships py.typed but
# re-exports its LibRaw* exceptions implicitly, which strict mode would reject;
# relax just that import so the RAW layer can catch them.
[[tool.mypy.overrides]]
module = ["rawpy", "rawpy.*"]
ignore_missing_imports = true
implicit_reexport = true

[tool.coverage.run]
branch = true
source = ["vibephoto"]
omit = ["*/ui/*"]
